--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,6 @@
-<p-menubar [model]="items">
-  <input type="text" pInputText placeholder="Search">
-    <button pButton label="Logout" icon="fa fa-sign-out"></button>
+<p-menubar [model]="items" [autoDisplay]="false">
+    <!--<input type="text" pInputText placeholder="Search">-->
+    <!--<button pButton label="Logout" icon="fa fa-sign-out"></button>-->
+    <!--<p-menubar class="user-nav-item" [model]="userItems" [autoDisplay]="false"></p-menubar>-->
 </p-menubar>
+
