--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,3 +12,15 @@
     background-color: #000000 !important;
     border: 1px solid #c8c8c8;
 }
+
+
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid blue;
+    border-bottom: 16px solid blue;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
