--- a/src/app/boards/boards.component.css
+++ b/src/app/boards/boards.component.css
@@ -3,6 +3,7 @@
     font-weight: bold;
     color: #1f4e79;
 }
+
 .mt0 {
     margin-top: 0;
 }
@@ -10,4 +11,33 @@
 .board-title {
     color: #7fbe0c;
     font-size: 24px;
+}
+
+.create-board {
+    height: 50px;
+    width: 100%;
+    background-color: #1271c7;
+    padding-left: 0;
+    padding-right: 0;
+    border-radius: 4px;
+}
+
+.boards-mine {
+    position: absolute;
+    left: 20px;
+    top: 7px;
+    font-size: 22px;
+    color: white;
+}
+
+.plus-icon {
+    font-size: 30px;
+    right: 12px;
+    position: absolute;
+    color: white;
+    top: 10px;
+}
+
+.plus-icon:hover {
+    color: #7fbe0c;
 }
