--- a/src/app/boards/boards.component.html
+++ b/src/app/boards/boards.component.html
@@ -18,4 +18,16 @@
             <p-dropdown [options]="retroOptions" [(ngModel)]="selectedOption" optionLabel="name"></p-dropdown>
         </div>
     </div>
+    <div class="row mt-3">
+        <div class="col-lg-6 col-md-6 col-sm-6">
+            <div class="col-lg-12 col-md-12 col-sm-12 create-board plr0">
+                <span class="boards-mine">Boards I created</span>
+                <a class="fa fa-plus-circle plus-icon" title="Create a new board" [routerLink]="['/boards/add']"></a>
+            </div>
+            <app-user-boards></app-user-boards>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6">
+
+        </div>
+    </div>
 </div>
