add board info templates, activity loader for service calls

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
 </div>
 <div class="app-div">
     <router-outlet>
-        <span *ngIf="showLoader" class="loading"></span>
+        <div *ngIf="showLoader" class="loading"></div>
     </router-outlet>
 </div>
