--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -18,20 +18,20 @@
       </div>
     </div>
     <div class="form-group">
-      <label for="pwd">Email</label>
-      <input type="email" class="form-control" id="email" name="email" formControlName="email">
+      <label>Email</label>
+      <input type="email" class="form-control" id="email" name="email" formControlName="email" placeholder="enter email">
     </div>
     <div class="form-group" *ngIf="!isParamsEmpty">
-      <label for="pwd">Password</label>
-      <input type="password" class="form-control" id="pwd" name="password" formControlName="password">
-      <div class="error-message" *ngIf="isSubmitted && registerForm.controls.confirmPassword.errors?.matchPassword">
+      <label>Password</label>
+      <input type="password" class="form-control" placeholder="enter password" name="password" formControlName="password">
+      <div class="error-message" *ngIf="isSubmitted && registerForm.controls.confirmPassword?.errors?.matchPassword">
         Password not match
       </div>
     </div>
     <div class="form-group" *ngIf="!isParamsEmpty">
-      <label for="confirm-pwd">Confirm Password</label>
-      <input type="password" class="form-control" formControlName="confirmPassword">
-      <div class="error-message" *ngIf="isSubmitted && registerForm.controls.confirmPassword.errors?.matchPassword">
+      <label>Confirm Password</label>
+      <input type="password" class="form-control" formControlName="confirmPassword" placeholder="confirm password">
+      <div class="error-message" *ngIf="isSubmitted && registerForm.get('confirmPassword')?.errors?.matchPassword">
         Password not match
       </div>
     </div>
@@ -39,6 +39,6 @@
   </form>
   <p class="col-lg-12"></p>
   <p class="col-lg-12">
-    Already signed up? <a [routerLink]="['/login']">Login</a>
+    Already signed up? <a [routerLink]="['../']">Login</a>
   </p>
 </div>
