--- a/src/app/boards/create/create.component.html
+++ b/src/app/boards/create/create.component.html
@@ -1,3 +1,29 @@
-<p>
-  create works!
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+            <label class="board-header">Create Board</label>
+            <i class="fa fa-question-circle question-circle" aria-hidden="true"></i>
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12">
+            <hr class="mt0"/>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 form-group">
+            <label class="board-title">Enter a board title</label>
+            <input class="form-control" placeholder="Consider meeting name">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+            <label class="board-title">Choose a board type</label>
+            <app-cards [templateCollection]="cardTemplates" (templateChange)="templateSelectionChange($event)"></app-cards>
+        </div>
+    </div>
+    <div class="row pull-right">
+        <div class="col-lg-12 col-md-12 col-sm-12 btn-group-create">
+            <button class="btn btn-primary crete-btn">Create</button>
+            <button class="btn btn-danger">Cancel</button>
+        </div>
+    </div>
+</div>
