--- a/src/app/boards/card/card.component.css
+++ b/src/app/boards/card/card.component.css
@@ -33,14 +33,50 @@ p-card /deep/ .ui-card {
 }
 
 p-card /deep/ .ui-card-footer {
-    padding-bottom: 10px;
     margin-bottom: 1rem;
     padding-top: 0;
     margin-right: 0;
     padding-right: 0;
 }
 
-
-.mr-6{
+.mr-6 {
     margin-right: -6px;
+}
+
+.card-abbreviation {
+    padding: 5px;
+}
+
+.card-badge {
+    margin-left: 10px;
+    color: white;
+    background-color: blue;
+    border: 1px solid #e6e6e6;
+    padding: 3px;
+    margin-top: -5px;
+}
+
+.card-member {
+    padding-left: 5px;
+    color: #b4b6b7;
+}
+
+.card-message-body {
+    padding: 11px 0 0 11px;
+}
+
+.card-message {
+    color: #225378;
+    font-size: 14px;
+}
+
+.thumb-icon {
+    font-size: 24px;
+    padding-left: 5px;
+    padding-right: 5px;
+    cursor: pointer;
+}
+
+.thumb-icon:hover {
+    color: #225400;
 }
