added template cards arrange left right.

--- a/src/app/boards/category/category.component.html
+++ b/src/app/boards/category/category.component.html
@@ -1,11 +1,24 @@
 <div class="container main-row">
-    <div class="row" *ngFor="let template of templateCollection; let i = index" [attr.data-index]="i">
-        <div class="col-lg-6 col-md-6 col-sm-6 plr0 " (click)="selectedTemplateHandler(template)">
-            <div class="main-card plr0" [ngClass]="{'selected-card': selectedTemplate?.name === template.name}">
-                <img src="assets/boards/icons/{{template.imageName}}" class="image-info">
-                <div class="col-lg-11 col-md-11 col-sm-11 card-info">
-                    <label class="card-label">{{template.name}}</label>
-                    <label class="label-description">{{template.description}}</label>
+    <div class="row" >
+        <div class="col-lg-6 col-md-6 col-sm-6 plr0 " *ngFor="let template of leftCardTemplate; let i = index" [attr.data-index]="i">
+            <div class="plr0 mlr0" (click)="selectedTemplateHandler(template)">
+                <div class="main-card plr0" [ngClass]="{'selected-card': selectedTemplate?.name === template.name}">
+                    <img src="assets/boards/icons/{{template.imageName}}" class="image-info">
+                    <div class="col-lg-11 col-md-11 col-sm-11 card-info">
+                        <label class="card-label">{{template.name}}</label>
+                        <label class="label-description">{{template.description}}</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 plr0 " *ngFor="let template of rightCardTemplate; let i = index" [attr.data-index]="i">
+            <div class="plr0 mlr0" (click)="selectedTemplateHandler(template)">
+                <div class="main-card plr0" [ngClass]="{'selected-card': selectedTemplate?.name === template.name}">
+                    <img src="assets/boards/icons/{{template.imageName}}" class="image-info">
+                    <div class="col-lg-11 col-md-11 col-sm-11 card-info">
+                        <label class="card-label">{{template.name}}</label>
+                        <label class="label-description">{{template.description}}</label>
+                    </div>
                 </div>
             </div>
         </div>
