--- a/src/app/boards/boards.component.html
+++ b/src/app/boards/boards.component.html
@@ -22,7 +22,7 @@
         <div class="col-lg-6 col-md-6 col-sm-6">
             <div class="col-lg-12 col-md-12 col-sm-12 create-board plr0">
                 <span class="boards-mine">Boards I created</span>
-                <a class="fa fa-plus-circle plus-icon" title="Create a new board" [routerLink]="['/boards/add']"></a>
+                <span class="fa fa-plus-circle plus-icon" title="Create a new board" [routerLink]="['/boards/add']"></span>
             </div>
             <app-user-boards [savedBoards]="savedUserBoards"></app-user-boards>
         </div>
