--- a/src/app/boards/manage-member/manage-member.component.html
+++ b/src/app/boards/manage-member/manage-member.component.html
@@ -63,14 +63,33 @@
         </div>
         <div class="col-sm-1">
             <span class="float-right">
-                <i class="fa fa-edit edit-icon"></i>
+                <i class="fa fa-edit font-icon"></i>
             </span>
         </div>
         <div class="col-sm-12">
             <span>{{owner?.email}}</span>
         </div>
+        <div *ngIf="showEditPermission" class="col-sm-12">
+            <div class="gray-box"></div>
+        </div>
+        <hr class="col-sm-12 plr0"/>
     </div>
-    <div *ngIf="showEditPermission" class="col-sm-12">
 
+    <div class="row" *ngFor="let member of membersList; let i = index" [attr.data-index]="i">
+        <div class="col-sm-11">
+            <span class="owner">{{member?.fullName}}</span>
+        </div>
+        <div class="col-sm-1">
+            <span class="float-right" (click)="deleteSelectedMember(member)">
+                <i class="fa fa-times font-icon"></i>
+            </span>
+            <span class="float-right">
+                <i class="fa fa-edit font-icon"></i>
+            </span>
+        </div>
+        <div class="col-sm-12">
+            <span>{{member?.emailAddress}}</span>
+        </div>
+        <hr class="col-sm-12 plr0"/>
     </div>
 </div>
