--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,44 +1,49 @@
 <div class="container">
-  <div class="page-header">
-    <h1>Sign Up</h1>
-  </div>
-  <form class="col-lg-6 col-md-6 col-sm-6" [formGroup]="registerForm">
-    <div class="col-lg-12 col-md-12 col-sm-12 plr0 mlr0 float-left">
-      <div class="col-lg-6 col-md-6 col-sm-6 plr0 float-left">
-        <div class="form-group">
-          <label>First Name</label>
-          <input class="form-control" formControlName="firstName">
+    <div class="page-header">
+        <h1>Sign Up</h1>
+    </div>
+    <form class="col-lg-6 col-md-6 col-sm-6" [formGroup]="registerForm">
+        <div class="col-lg-12 col-md-12 col-sm-12 plr0 mlr0 float-left">
+            <div class="col-lg-6 col-md-6 col-sm-6 plr0 float-left">
+                <div class="form-group">
+                    <label>First Name</label>
+                    <input class="form-control" formControlName="firstName">
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 float-left pr0">
+                <div class="form-group">
+                    <label>last Name</label>
+                    <input class="form-control" formControlName="lastName">
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="col-lg-6 col-md-6 col-sm-6 float-left pr0">
         <div class="form-group">
-          <label>last Name</label>
-          <input class="form-control" formControlName="lastName">
+            <label>Email</label>
+            <input type="email" class="form-control" id="email" name="email" formControlName="email"
+                   placeholder="enter email">
         </div>
-      </div>
-    </div>
-    <div class="form-group">
-      <label>Email</label>
-      <input type="email" class="form-control" id="email" name="email" formControlName="email" placeholder="enter email">
-    </div>
-    <div class="form-group" *ngIf="!isParamsEmpty">
-      <label>Password</label>
-      <input type="password" class="form-control" placeholder="enter password" name="password" formControlName="password">
-      <div class="error-message" *ngIf="isSubmitted && registerForm.controls.confirmPassword?.errors?.matchPassword">
-        Password not match
-      </div>
-    </div>
-    <div class="form-group" *ngIf="!isParamsEmpty">
-      <label>Confirm Password</label>
-      <input type="password" class="form-control" formControlName="confirmPassword" placeholder="confirm password">
-      <div class="error-message" *ngIf="isSubmitted && registerForm.get('confirmPassword')?.errors?.matchPassword">
-        Password not match
-      </div>
-    </div>
-    <button type="submit" class="btn btn-primary" (click)="doRegister()">Submit</button>
-  </form>
-  <p class="col-lg-12"></p>
-  <p class="col-lg-12">
-    Already signed up? <a [routerLink]="['../']">Login</a>
-  </p>
+        <div class="form-group" *ngIf="!isParamsEmpty">
+            <label>Password</label>
+            <input type="password" class="form-control" placeholder="enter password" name="password"
+                   formControlName="password">
+            <div class="error-message"
+                 *ngIf="isSubmitted && registerForm.controls.confirmPassword?.errors?.matchPassword">
+                Password not match
+            </div>
+        </div>
+        <div class="form-group" *ngIf="!isParamsEmpty">
+            <label>Confirm Password</label>
+            <input type="password" class="form-control" formControlName="confirmPassword"
+                   placeholder="confirm password">
+            <div class="error-message"
+                 *ngIf="isSubmitted && registerForm.get('confirmPassword')?.errors?.matchPassword">
+                Password not match
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary" (click)="doRegister()">Submit</button>
+    </form>
+    <p class="col-lg-12"></p>
+    <p class="col-lg-12">
+        Already signed up? <a [routerLink]="['../']">Login</a>
+    </p>
 </div>
